# py-maker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: FUNDING.yml  codeql.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  linting.yml  mypy.yml  stale.yml  tests.yml
app/: __init__.py
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: changelog.md  configuration.md  contributing.md  future-plans.md  index.md  installation.md  license.md  quick-start.md  tasks.md  usage.md
docs/css/: extra.css
docs/hooks/: __init__.py  google_style_notes.py
docs/template/: default.md  internal.md  modify.md  replace.md
future-plans/: index.html
installation/: index.html
license/: index.html
py_maker/: constants.py  copy.py  generator.py  helpers.py  main.py  poetry.py  prompt.py  pymaker.py  schema.py
py_maker/commands/: config.py  helpers.py  new.py  template.py
py_maker/config/: __init__.py  settings.py
py_maker/github_ctrl/: __init__.py  main.py
py_maker/licenses/: Apache2.jinja  BSD2.jinja  BSD3.jinja  CDDL.jinja  MIT.tpl  __init__.py
py_maker/prompt/: __init__.py  prompt.py
py_maker/template/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md  README.md.jinja  TODO.md  __init__.py  pyproject.toml.jinja
py_maker/template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
py_maker/template/.github/workflows/: linting.yml
py_maker/template/app/: __init__.py  main.py  main.py.jinja
py_maker/template/dynamic/: README.md.jinja  pyproject.toml.jinja
py_maker/template/licenses/: MIT.jinja
py_maker/template/static/: .pre-commit-config.yaml
py_maker/template/tests/: __init__.py
py_maker/tests/: test_prompt.py
py_maker/tree/: __init__.py  tree.py
quick-start/: index.html
search/: search_index.json
tasks/: index.html
template/internal/: index.html
template/modify/: index.html
template/replace/: index.html
tests/: conftest.py  test_config.py  test_constants.py  test_helpers.py  test_main.py  test_prompt.py  test_pymaker.py  test_schema.py  test_settings.py
usage/: index.html
